--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7"
+    "@reduxjs/toolkit": "^2.2.7",
+    "redux-logger": "^3.0.6"
   }
 }
